@@ -130,7 +130,6 @@ Stuff still to do (medium size):
 - Convert bulky media files into more compact representations
 - Proper uninitialization of everything when quitting
   - Currently pretty nonexistant, got only some atexit callbacks
-- Option to display the planet statistics as text instead of images?
 - Rewrite game pausing to be an event-level thing
 
 Stuff still to do (small):
